--- a/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
+++ b/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
@@ -19,21 +19,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TEw-ec-RvC">
-                            <size key="itemSize" width="186" height="189"/>
+                            <size key="itemSize" width="189" height="189"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="Oeh-iE-LvI" customClass="CollectionViewCell" customModule="OBJCAstronomyProject" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
+                                <rect key="frame" x="0.0" y="0.0" width="189" height="189"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jg7-tx-xHM">
-                                    <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="189" height="189"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
-                                            <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="MarsPlaceholder" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
+                                            <rect key="frame" x="0.0" y="0.0" width="188" height="189"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -45,7 +45,7 @@
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <edgeInsets key="layoutMargins" top="8" left="14" bottom="8" right="8"/>
-                                <size key="customSize" width="186" height="189"/>
+                                <size key="customSize" width="189" height="189"/>
                                 <connections>
                                     <outlet property="photoCollectionViewCell" destination="MqJ-ic-Pfw" id="yzU-dv-c5F"/>
                                     <segue destination="jyZ-6m-pV9" kind="show" id="N2u-0F-lcN"/>
