--- a/Astronomy/Astronomy/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
         <!--Title-->
         <scene sceneID="vii-xO-N6s">
             <objects>
-                <viewController id="Mg1-fg-ZmS" sceneMemberID="viewController">
+                <viewController id="Mg1-fg-ZmS" customClass="DetailVC" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0M0-Pf-tPC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -100,6 +100,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zOe-Nt-hVH">
                                 <rect key="frame" x="133.5" y="589" width="147" height="30"/>
                                 <state key="normal" title="Save to Photo Library"/>
+                                <connections>
+                                    <action selector="savePhoto:" destination="Mg1-fg-ZmS" eventType="touchUpInside" id="bs2-QT-gtU"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="be6-mo-bMR"/>
@@ -116,6 +119,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Hr3-14-JQu"/>
+                    <connections>
+                        <outlet property="cameraLabel" destination="ExU-BL-wQC" id="IwY-3a-vsQ"/>
+                        <outlet property="detailLabel" destination="YWT-17-T9X" id="3Z8-ec-oC1"/>
+                        <outlet property="imageView" destination="6cA-A9-rWe" id="2vd-PL-TL2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TXo-Lf-Qjx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
